change and add some css properties

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1>Hi, its milkiyd</h1>
 
     <h2>
-        I am 
-        <span class="typeWriter" data-speed="3" data-text='
-            [" a software engineer !", " a web developer !", " a data scientist !"]'
+        I am a
+        <span class="typeWriter" data-speed="3" data-end="3000" data-text='
+            [" software engineer !", " web developer !", " data scientist !"]'
         >
         </span>
     </h2>
